# roccat-tools

./: .gitignore  CMakeLists.txt  Changelog  INSTALL  KNOWN_LIMITATIONS  roccat-tools.spec  roccat.spec
kiro/: CMakeLists.txt  kiro_dbus_services.xml
kiro/libkiroeventhandler/: CMakeLists.txt  kiro_dbus_server.c  kiro_dbus_server.h  kiro_eventhandler.c  kiro_eventhandler_channel.c  kiro_eventhandler_channel.h
kiro/libkirogfxplugin/: CMakeLists.txt  kirogfxplugin.c
kiro/libroccatkiro/: CMakeLists.txt  kiro.h  kiro_config.c  kiro_config.h  kiro_dbus_services.c  kiro_dbus_services.h  kiro_dcu.c  kiro_dcu.h  kiro_device.c  kiro_device.h  kiro_device_state.c  kiro_device_state.h  kiro_firmware.h  kiro_gfx.c  kiro_gfx.h  kiro_info.c  kiro_info.h  kiro_profile.c  kiro_profile.h  kiro_profile_data.c  kiro_profile_data.h  kiro_profile_data_eventhandler.c  kiro_profile_data_eventhandler.h  kiro_profile_data_hardware.c  kiro_profile_data_hardware.h  kiro_rmp.c  kiro_rmp.h  kiro_special.h  kiro_talkfx.c  kiro_talkfx.h
kiro/roccatkiroconfig/: CMakeLists.txt  kiro_button_combo_box.c  kiro_button_combo_box.h  kiro_buttons_frame.c  kiro_buttons_frame.h  kiro_color_frame.c  kiro_color_frame.h  kiro_configuration_dialog.c  kiro_configuration_dialog.h  kiro_dcu_frame.c  kiro_dcu_frame.h  kiro_light_effects_frame.c  kiro_light_effects_frame.h  kiro_notification_frame.c  kiro_notification_frame.h  kiro_profile_page.c  kiro_profile_page.h  kiro_sensitivity_frame.c  kiro_sensitivity_frame.h  kiroconfig.c  kiroconfig_window.c  kiroconfig_window.h  roccatkiroconfig.desktop
kiro/roccatkirocontrol/: CMakeLists.txt  kirocontrol.c
kova2016/: CMakeLists.txt  kova2016_dbus_services.xml
kova2016/libkova2016eventhandler/: CMakeLists.txt  kova2016_dbus_server.c  kova2016_dbus_server.h  kova2016_eventhandler.c  kova2016_eventhandler_channel.c  kova2016_eventhandler_channel.h
kova2016/libkova2016gfxplugin/: CMakeLists.txt  kova2016gfxplugin.c
kova2016/libroccatkova2016/: CMakeLists.txt  kova2016.h  kova2016_config.c  kova2016_config.h  kova2016_control_unit.c  kova2016_control_unit.h  kova2016_dbus_services.c  kova2016_dbus_services.h  kova2016_device.c  kova2016_device.h  kova2016_device_state.c  kova2016_device_state.h  kova2016_firmware.h  kova2016_gfx.c  kova2016_gfx.h  kova2016_info.c  kova2016_info.h  kova2016_macro.c  kova2016_macro.h  kova2016_profile.c  kova2016_profile.h  kova2016_profile_button.h  kova2016_profile_buttons.c  kova2016_profile_buttons.h  kova2016_profile_data.c  kova2016_profile_data.h  kova2016_profile_data_eventhandler.c  kova2016_profile_data_eventhandler.h  kova2016_profile_data_hardware.c  kova2016_profile_data_hardware.h  kova2016_profile_settings.c  kova2016_profile_settings.h  kova2016_rmp.c  kova2016_rmp.h  kova2016_sensor.c  kova2016_sensor.h  kova2016_special.h  kova2016_talk.c  kova2016_talk.h
kova2016/roccatkova2016config/: CMakeLists.txt  kova2016_button_combo_box.c  kova2016_button_combo_box.h  kova2016_buttons_frame.c  kova2016_buttons_frame.h  kova2016_color_frame.c  kova2016_color_frame.h  kova2016_configuration_dialog.c  kova2016_configuration_dialog.h  kova2016_cpi_dialog.c  kova2016_cpi_dialog.h  kova2016_light_effects_frame.c  kova2016_light_effects_frame.h  kova2016_notification_frame.c  kova2016_notification_frame.h  kova2016_profile_page.c  kova2016_profile_page.h  kova2016config.c  kova2016config_window.c  kova2016config_window.h  roccatkova2016config.desktop
kova2016/roccatkova2016control/: CMakeLists.txt  kova2016control.c
ryosmk/: CMakeLists.txt  ryosmk_dbus_services.xml
ryosmk/effect_modules/: CMakeLists.txt  fire.lua  plasma.lua  ripple.lua  test.lua
ryosmk/libroccatryosmk/: CMakeLists.txt  ryos.h  ryos_config.c  ryos_config.h  ryos_custom_lights.c  ryos_dbus_services.c  ryos_dbus_services.h  ryos_default_rkp.c  ryos_default_rkp.h  ryos_device.c  ryos_device.h  ryos_device_state.c  ryos_effect_client.c  ryos_effect_client.h  ryos_effect_device.c  ryos_effect_device.h  ryos_effect_lua.c  ryos_effect_lua.h  ryos_info.c  ryos_key.c  ryos_key_mask.c  ryos_key_mask.h  ryos_key_relations.c  ryos_key_relations.h  ryos_keys_easyzone.c  ryos_keys_easyzone.h  ryos_keys_extra.c  ryos_keys_extra.h  ryos_keys_function.c  ryos_keys_function.h  ryos_keys_macro.c  ryos_keys_macro.h  ryos_keys_primary.c  ryos_keys_primary.h  ryos_keys_thumbster.c  ryos_keys_thumbster.h  ryos_led_macro.c  ryos_led_macro.h  ryos_led_macro_thread.c  ryos_light.c  (+24 more)
ryosmk/libroccatryosmkwidget/: CMakeLists.txt  ryos_capslock_selector.c  ryos_capslock_selector.h  ryos_configuration_dialog.c  ryos_configuration_dialog.h  ryos_fn_selector.c  ryos_fn_selector.h  ryos_gui_key_relations.c  ryos_gui_key_relations.h  ryos_key_combo_box.c  ryos_key_combo_box.h  ryos_key_mask_selector.c  ryos_key_mask_selector.h  ryos_layer_mode_selector.c  ryos_layer_mode_selector.h  ryos_layer_selector.c  ryos_layer_selector.h  ryos_layout_selector.c  ryos_layout_selector.h  ryos_notification_frame.c  ryos_notification_frame.h  ryos_standard_selector.c  ryos_standard_selector.h
ryosmk/libryosmkeventhandler/: CMakeLists.txt  ryos_dbus_server.c  ryos_dbus_server.h  ryos_eventhandler.c  ryos_eventhandler_channel.c  ryos_eventhandler_channel.h
ryosmk/roccatryosmkconfig/: CMakeLists.txt  ryosconfig.c  ryosconfig_blink.c  ryosconfig_blink.h  ryosconfig_effect_selector.c  ryosconfig_effect_selector.h  ryosconfig_illumination_frame.c  ryosconfig_illumination_frame.h  ryosconfig_key_illumination_selector.c  ryosconfig_key_illumination_selector.h  ryosconfig_keyboard_selector.c  ryosconfig_keyboard_selector.h  ryosconfig_layer_illumination_dialog.c  ryosconfig_layer_illumination_dialog.h  ryosconfig_led_feedback_frame.c  ryosconfig_led_feedback_frame.h  ryosconfig_light_frame.c  ryosconfig_light_frame.h  ryosconfig_pro_dimness_selector.c  ryosconfig_pro_dimness_selector.h  ryosconfig_profile_page.c  (+3 more)
ryosmkfx/: CMakeLists.txt  ryosmkfx_dbus_services.xml
skeltr/: CMakeLists.txt  skeltr_dbus_services.xml
sova/: CMakeLists.txt  sova_dbus_services.xml
suora/: CMakeLists.txt  suora_dbus_services.xml
(+1237 files in other folders)
