ADD_EXECUTABLE(roccatkova2016control kova2016control.c)

TARGET_LINK_LIBRARIES(roccatkova2016control
  libroccatkova2016
  libroccat
  ${GLIB2_LIBRARIES}
)

INSTALL(TARGETS roccatkova2016control
  DESTINATION bin
  PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
)

ADD_SUBDIRECTORY(man)
